# projekt_podsumowujacy_pogoda_tatry

./: .gitignore  API.ipynb  Analiza danych pogodowych.ipynb  EDA.ipynb  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: refresh_data.yml
Notebooks/: AI_API.ipynb  API.ipynb  Analiza danych pogodowych.ipynb  sqlite_weather_data.ipynb
Scripts/: API.py  ai_risk.py  api_refresh.py  dashboard.py  dashboard_utils.py  sqlite_import.py  weather_db.py
Scripts/pages/: 1_Dane_historyczne.py  2_Prognoza_pogody.py
data/: historical_for_eda.csv  weather.db  weather_history.csv
data/json/: 20260321_162717.json  20260322_095954.json  20260322_102123.json  20260322_103434.json  20260322_115055.json  20260322_145329.json  20260323_052605.json  20260330_055357.json  20260406_055411.json  20260413_060808.json  20260420_060818.json  20260427_062122.json  20260504_063224.json  20260511_065716.json
