[project]
name = "projekt-podsumowujacy-pogoda-tatry"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
