[project]
name = "projekt-podsumowujacy-pogoda-tatry"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2,<3.0.0",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
    "tqdm>=4.67.3",
]
